--- a/paper/SM.tex
+++ b/paper/SM.tex
@@ -141,12 +141,12 @@
 \clearpage
 \section{Unbalanced growth}
 
-In our main specification, we assume that each percentile a country's income (or consumption) distribution obtains the same share of national income in 2030 than it did in the last survey year. In this section, we explore an alternative assumption that extends the recent national trends in inequality. For each country, I consider the last survey that is at least five years older than the last survey year. In 54\% of cases, this older survey is 5 years older, while in 40\% of cases, it is 6 to 10 years older. Then, for each national percentile, I compute the difference in income share between these two survey years, which I call the ``recent past'', and I extend the annual evolution in income shares up to 2030.\footnote{To handle the few cases where the average income in a given percentile became negative or lower than the previous percentile, I re-order the percentiles and impose a minimum income of zero.} 
+In our main specification, we assume that each percentile a country's income (or consumption) distribution obtains the same share of national income in 2030 than it did in the last survey year. In this section, we explore an alternative assumption that extends the recent national trends in inequality. For each country, I consider the most recent survey that is at least five years older than the last survey year. In 54\% of the cases, the interval between these two surveys, which I call the ``recent past,'' is 5 years, while in 40\% of the cases it is 6 to 10 years. Then, for each national percentile, I compute the difference in income share between these two survey years, and I extend the annual evolution in income shares up to 2030.\footnote{To handle the few cases where the average income in a given percentile became negative or lower than the previous percentile, I re-order the percentiles and impose a minimum income of zero.} 
 
 Inequality has been quite stable in the recent past, as 66\% (resp. 98\%) of country-percentile shares have grown or contracted by less than 1\% (resp. 5\%) per year. The projected global Gini index in 2030 is .62 in both the balanced and unbalanced growth scenarios with 3\% average growth. Looking at countries' income quintiles, growth has been positive for around 63\% of the three bottom income quintiles and for 35\% of the top quintile, with average growth of 0.3\% per year for the three bottom quintiles and contraction of 0.3\% per year for the top quintiles. 
 
 In Table \ref{tab:floor}, I compute the income floor that can be financed by the simple tax (a rate of 10\% above \$6.85/day) in the scenario of unbalanced growth with 3\% average growth. 
-The income floors after unbalanced growth are close to the ones after the corresponding balanced growth scenario. On average, the former are 2\% greater than the latter, and they are within one-tenth (resp. one-third) of difference with the latter in 60\% (resp. 92\%) of countries. % The resulting income floors are close to the ones in the corresponding balanced growth scenario. The income floors after unbalanced growth are on average 2\% greater than the ones after balanced growth. Moreover, the former are within one-tenth (resp. one-third) of difference with the latter in 60\% (resp. 92\%) of countries. 
+The income floors after unbalanced growth are close to the ones after the corresponding balanced growth scenario. On average, the former are 2\% larger than the latter, and they are within one-tenth (resp. one-third) of the difference with the latter in 60\% (resp. 92\%) of countries. % The resulting income floors are close to the ones in the corresponding balanced growth scenario. The income floors after unbalanced growth are on average 2\% greater than the ones after balanced growth. Moreover, the former are within one-tenth (resp. one-third) of difference with the latter in 60\% (resp. 92\%) of countries. 
 The income floor is below the extreme poverty threshold in 22 countries after unbalanced growth vs. 23 countries after balanced growth (for 20 countries, the income floor is below \$2.15/day in both scenarios). 
 
 \clearpage
