--- a/paper/poverty.tex
+++ b/paper/poverty.tex
@@ -603,101 +603,101 @@ Also, any custom figure can be easily produced using this code. The article also
 \setcounter{figure}{0}
 \setcounter{table}{0}
 
-% \clearpage
-% \section{Appendix}
-% \subsection{Additional figures}
+\clearpage
+\section{Appendix}
+\subsection{Additional figures}
 
-% Many more figures (with varying poverty lines, taxation thresholds, growth scenarios, etc.) are available on \href{https://github.com/bixiou/domestic_poverty_eradication/tree/main/figures}{github.com/bixiou/domestic\_poverty\_eradication}. Also, any custom figure can be easily produced using this code.
+Many more figures (with varying poverty lines, taxation thresholds, growth scenarios, etc.) are available on \href{https://github.com/bixiou/domestic_poverty_eradication/tree/main/figures}{github.com/bixiou/domestic\_poverty\_eradication}. Also, any custom figure can be easily produced using this code.
 
-% % Main text figures:
-% % y_expropriated_2_average
-% % antipoverty_2_tax_7_average
-% % antipoverty_2_tax_18_very_optimistic
-% % demogrant_7__10
+% Main text figures:
+% y_expropriated_2_average
+% antipoverty_2_tax_7_average
+% antipoverty_2_tax_18_very_optimistic
+% demogrant_7__10
 
-% % Appendix figures:
-% % s_antipoverty_2_tax_7_average
-% % antipoverty_2_tax_7_reg
-% % antipoverty_2_tax_18_average
-% % s_antipoverty_2_tax_18_very_optimistic
-% % antipoverty_4_tax_18_average
-% % antipoverty_7_tax_18_average
-% % antipoverty_7_tax_7_average
-% % demogrant_7__10_very_optimistic
-% % s_demogrant_7__10
+% Appendix figures:
+% s_antipoverty_2_tax_7_average
+% antipoverty_2_tax_7_reg
+% antipoverty_2_tax_18_average
+% s_antipoverty_2_tax_18_very_optimistic
+% antipoverty_4_tax_18_average
+% antipoverty_7_tax_18_average
+% antipoverty_7_tax_7_average
+% demogrant_7__10_very_optimistic
+% s_demogrant_7__10
 
-% \begin{figure}[!htb]
-%   \caption[anti-\textit{extreme-poverty} tax above \$6.85/day after 3\% growth (HFCE-scaled).]{Linear tax rate above \$6.85/day eradicating extreme poverty (in \%). Data has been rescaled to match HFCE aggregate from national account. In this idealized policy, all tax revenue is transferred to the extreme poor and lift them at \$2.15/day, assuming away distorsions, and after a yearly growth of 3\% over 2022--2030. 
-%   }\label{fig:s_antipoverty_2_tax_7_average}
-%   \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
-%   {../figures/s_antipoverty_2_tax_7_average.pdf}}
-% \end{figure}
+\begin{figure}[!htb]
+  \caption[anti-\textit{extreme-poverty} tax above \$6.85/day after 3\% growth (HFCE-scaled).]{Linear tax rate above \$6.85/day eradicating extreme poverty (in \%). Data has been rescaled to match HFCE aggregate from national account. In this idealized policy, all tax revenue is transferred to the extreme poor and lift them at \$2.15/day, assuming away distorsions, and after a yearly growth of 3\% over 2022--2030. 
+  }\label{fig:s_antipoverty_2_tax_7_average}
+  \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
+  {../figures/s_antipoverty_2_tax_7_average.pdf}}
+\end{figure}
 
-% \begin{figure}[!htb]
-%   \caption[anti-\textit{extreme-poverty} tax above \$6.85/day after predicted growth.]{Linear tax rate above \$6.85/day eradicating extreme poverty (in \%). In this idealized policy, all tax revenue is transferred to the extreme poor and lift them at \$2.15/day, assuming away distorsions, with growth until 2030 predicted at the country level. 
-%   }\label{fig:antipoverty_2_tax_7_reg}
-%   \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
-%   {../figures/antipoverty_2_tax_7_reg.pdf}}
-% \end{figure}
+\begin{figure}[!htb]
+  \caption[anti-\textit{extreme-poverty} tax above \$6.85/day after predicted growth.]{Linear tax rate above \$6.85/day eradicating extreme poverty (in \%). In this idealized policy, all tax revenue is transferred to the extreme poor and lift them at \$2.15/day, assuming away distorsions, with growth until 2030 predicted at the country level. 
+  }\label{fig:antipoverty_2_tax_7_reg}
+  \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
+  {../figures/antipoverty_2_tax_7_reg.pdf}}
+\end{figure}
 
-% \begin{figure}[!htb]
-%   \caption[anti-\textit{extreme-poverty} tax above \$18.15/day after 3\% growth.]{Linear tax rate above \$18.15/day eradicating extreme poverty (in \%). In this idealized policy, all tax revenue is transferred to the extreme poor and lift them at \$2.15/day, assuming away distorsions, and after a yearly growth of 3\% over 2022--2030. 
-%   }\label{fig:antipoverty_2_tax_18_average}
-%   \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
-%   {../figures/antipoverty_2_tax_18_average.pdf}}
-% \end{figure}
+\begin{figure}[!htb]
+  \caption[anti-\textit{extreme-poverty} tax above \$18.15/day after 3\% growth.]{Linear tax rate above \$18.15/day eradicating extreme poverty (in \%). In this idealized policy, all tax revenue is transferred to the extreme poor and lift them at \$2.15/day, assuming away distorsions, and after a yearly growth of 3\% over 2022--2030. 
+  }\label{fig:antipoverty_2_tax_18_average}
+  \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
+  {../figures/antipoverty_2_tax_18_average.pdf}}
+\end{figure}
 
-% \begin{figure}[!htb]
-%   \caption[anti-\textit{extreme-poverty} tax above \$18.15/day after 7\% growth (HFCE-scaled).]{Linear tax rate above \$18.15/day eradicating extreme poverty (in \%). Data has been rescaled to match HFCE aggregate from national account. In this idealized policy, all tax revenue is transferred to the extreme poor and lift them at \$2.15/day, assuming away distorsions, and after a yearly growth of 7\% over 2022--2030. 
-%   }\label{fig:s_antipoverty_2_tax_18_very_optimistic}
-%   \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
-%   {../figures/s_antipoverty_2_tax_18_very_optimistic.pdf}}
-% \end{figure}
+\begin{figure}[!htb]
+  \caption[anti-\textit{extreme-poverty} tax above \$18.15/day after 7\% growth (HFCE-scaled).]{Linear tax rate above \$18.15/day eradicating extreme poverty (in \%). Data has been rescaled to match HFCE aggregate from national account. In this idealized policy, all tax revenue is transferred to the extreme poor and lift them at \$2.15/day, assuming away distorsions, and after a yearly growth of 7\% over 2022--2030. 
+  }\label{fig:s_antipoverty_2_tax_18_very_optimistic}
+  \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
+  {../figures/s_antipoverty_2_tax_18_very_optimistic.pdf}}
+\end{figure}
 
-% \begin{figure}[!htb]
-%   \caption[Anti-severe-poverty tax above \$18.15/day after 3\% .]{Linear tax rate above \$18.15/day eradicating severe poverty (in \%). In this idealized policy, all tax revenue is transferred to the severe poor and lift them at \$3.65/day, assuming away distorsions, and after a yearly growth of 3\% over 2022--2030. 
-%   }\label{fig:antipoverty_4_tax_18_average}
-%   \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
-%   {../figures/antipoverty_4_tax_18_average.pdf}}
-% \end{figure}
+\begin{figure}[!htb]
+  \caption[Anti-severe-poverty tax above \$18.15/day after 3\% .]{Linear tax rate above \$18.15/day eradicating severe poverty (in \%). In this idealized policy, all tax revenue is transferred to the severe poor and lift them at \$3.65/day, assuming away distorsions, and after a yearly growth of 3\% over 2022--2030. 
+  }\label{fig:antipoverty_4_tax_18_average}
+  \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
+  {../figures/antipoverty_4_tax_18_average.pdf}}
+\end{figure}
 
-% \begin{figure}[!htb]
-%   \caption[Anti-acute-poverty tax above \$18.15/day after 3\% growth (HFCE-scaled).]{Linear tax rate above \$18.15/day eradicating extreme poverty (in \%). In this idealized policy, all tax revenue is transferred to the extreme poor and lift them at \$6.85/day, assuming away distorsions, and after a yearly growth of 3\% over 2022--2030. 
-%   }\label{fig:antipoverty_7_tax_18_average}
-%   \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
-%   {../figures/antipoverty_7_tax_18_average.pdf}}
-% \end{figure}
+\begin{figure}[!htb]
+  \caption[Anti-acute-poverty tax above \$18.15/day after 3\% growth (HFCE-scaled).]{Linear tax rate above \$18.15/day eradicating extreme poverty (in \%). In this idealized policy, all tax revenue is transferred to the extreme poor and lift them at \$6.85/day, assuming away distorsions, and after a yearly growth of 3\% over 2022--2030. 
+  }\label{fig:antipoverty_7_tax_18_average}
+  \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
+  {../figures/antipoverty_7_tax_18_average.pdf}}
+\end{figure}
 
-% \begin{figure}[!htb]
-%   \caption[Anti-acute-poverty tax above \$6.85/day after 3\% growth (HFCE-scaled).]{Linear tax rate above \$6.85/day eradicating extreme poverty (in \%). In this idealized policy, all tax revenue is transferred to the extreme poor and lift them at \$6.85/day, assuming away distorsions, and after a yearly growth of 3\% over 2022--2030. 
-%   }\label{fig:antipoverty_7_tax_7_average}
-%   \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
-%   {../figures/antipoverty_7_tax_7_average.pdf}}
-% \end{figure}
+\begin{figure}[!htb]
+  \caption[Anti-acute-poverty tax above \$6.85/day after 3\% growth (HFCE-scaled).]{Linear tax rate above \$6.85/day eradicating extreme poverty (in \%). In this idealized policy, all tax revenue is transferred to the extreme poor and lift them at \$6.85/day, assuming away distorsions, and after a yearly growth of 3\% over 2022--2030. 
+  }\label{fig:antipoverty_7_tax_7_average}
+  \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
+  {../figures/antipoverty_7_tax_7_average.pdf}}
+\end{figure}
 
-% \begin{figure}[!htb]
-%   \caption[Income floor of 10\% tax above \$6.85/day after 7\% growth.]{Income floor that can be funded with a 10\% marginal tax on income above \$6.85/day (in 2017 PPP \$/day). In this idealized policy, all tax revenue is transferred to the poorest and lift them at the income floor, assuming away distorsions, and after a yearly growth of 7\% over 2022--2030. 
-%   }\label{fig:demogrant_7__10_very_optimistic}
-%   \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
-%   {../figures/floor_7__10_very_optimistic.pdf}}
-% \end{figure}
+\begin{figure}[!htb]
+  \caption[Income floor of 10\% tax above \$6.85/day after 7\% growth.]{Income floor that can be funded with a 10\% marginal tax on income above \$6.85/day (in 2017 PPP \$/day). In this idealized policy, all tax revenue is transferred to the poorest and lift them at the income floor, assuming away distorsions, and after a yearly growth of 7\% over 2022--2030. 
+  }\label{fig:demogrant_7__10_very_optimistic}
+  \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
+  {../figures/floor_7__10_very_optimistic.pdf}}
+\end{figure}
 
-% \FloatBarrier
-% \begin{figure}[!htb]
-%   \caption[Income floor of 10\% tax above \$6.85/day after 3\% growth (HFCE-scaled).]{Income floor that can be funded with a 10\% marginal tax on income above \$6.85/day (in 2017 PPP \$/day). Data has been rescaled to match HFCE aggregate from national account. In this idealized policy, all tax revenue is transferred to the poorest and lift them at the income floor, assuming away distorsions, and after a yearly growth of 3\% over 2022--2030. 
-%   }\label{fig:s_demogrant_7__10}
-%   \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
-%   {../figures/s_floor_7__10.pdf}}
-% \end{figure}
+\FloatBarrier
+\begin{figure}[!htb]
+  \caption[Income floor of 10\% tax above \$6.85/day after 3\% growth (HFCE-scaled).]{Income floor that can be funded with a 10\% marginal tax on income above \$6.85/day (in 2017 PPP \$/day). Data has been rescaled to match HFCE aggregate from national account. In this idealized policy, all tax revenue is transferred to the poorest and lift them at the income floor, assuming away distorsions, and after a yearly growth of 3\% over 2022--2030. 
+  }\label{fig:s_demogrant_7__10}
+  \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
+  {../figures/s_floor_7__10.pdf}}
+\end{figure}
 
-% \subsection{Additional tables}
-% \input{../tables/income.tex}
-% \input{../tables/trend.tex}
-% \input{../tables/cap.tex}
-% \input{../tables/tax.tex}
-% \input{../tables/tax4.tex}
-% \input{../tables/tax7.tex}
-% \input{../tables/floor.tex}
-% \input{../tables/gain.tex}
+\subsection{Additional tables}
+\input{../tables/income.tex}
+\input{../tables/trend.tex}
+\input{../tables/cap.tex}
+\input{../tables/tax.tex}
+\input{../tables/tax4.tex}
+\input{../tables/tax7.tex}
+\input{../tables/floor.tex}
+\input{../tables/gain.tex}
 
 \end{document}
